--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "test:e2e": "vue-cli-service test:e2e"
   },
   "dependencies": {
+    "ant-design-vue": "^1.4.11",
+    "babel-plugin-import": "^1.13.0",
     "core-js": "^3.6.4",
     "vue": "^2.6.11",
     "vue-router": "^3.1.5",
@@ -22,8 +24,9 @@
     "@vue/cli-plugin-vuex": "~4.2.0",
     "@vue/cli-service": "~4.2.0",
     "@vue/test-utils": "1.0.0-beta.31",
+    "antd-theme-webpack-plugin": "^1.3.1",
     "chai": "^4.1.2",
-    "less": "^3.0.4",
+    "less": "^2.7.2",
     "less-loader": "^5.0.0",
     "vue-template-compiler": "^2.6.11"
   }
