--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "ant-design-vue": "^1.4.11",
     "babel-plugin-import": "^1.13.0",
     "core-js": "^3.6.4",
+    "nprogress": "^0.2.0",
     "vcolorpicker": "^0.1.8",
     "vue": "^2.6.11",
     "vue-router": "^3.1.5",
